Add temp script to test reevo and resolve bugs

--- a/ga/reevo/cfg/llm_client/siliconflow.yaml
+++ b/ga/reevo/cfg/llm_client/siliconflow.yaml
@@ -1,4 +1,4 @@
-_target_: utils.llm_client.openai.OpenAIClient
+_target_: ga.reevo.utils.llm_client.openai.OpenAIClient
 
 # Using SILICONFLOW API
 # see more models at https://cloud.siliconflow.cn/models
