--- a/ga/reevo/cfg/llm_client/openai.yaml
+++ b/ga/reevo/cfg/llm_client/openai.yaml
@@ -1,5 +1,5 @@
-_target_: utils.llm_client.openai.OpenAIClient
+_target_: ga.reevo.utils.llm_client.openai.OpenAIClient
 
 model: gpt-3.5-turbo # LLM model
-temperature: 1.0  # temperature for chat completion
+temperature: 1.0 # temperature for chat completion
 api_key: ${oc.env:OPENAI_API_KEY,null}
