--- a/ga/reevo/cfg/llm_client/zhipuai.yaml
+++ b/ga/reevo/cfg/llm_client/zhipuai.yaml
@@ -1,6 +1,6 @@
-_target_: utils.llm_client.zhipuai.ZhipuAIClient
+_target_: ga.reevo.utils.llm_client.zhipuai.ZhipuAIClient
 
 # use LLM API provided by Zhipu AI
 model: GLM-3-Turbo
-temperature: 1.0  # temperature for chat completion
+temperature: 1.0 # temperature for chat completion
 api_key: ${oc.env:ZHIPUAI_API_KEY,null}
