--- a/ga/eoh/cfg/llm_client/moonshot.yaml
+++ b/ga/eoh/cfg/llm_client/moonshot.yaml
@@ -1,4 +1,4 @@
-_target_: ga.reevo.utils.llm_client.openai.OpenAIClient
+_target_: utils.llm_client.openai.OpenAIClient
 
 # Using Moonshot API
 model: moonshot-v1-8k
