--- a/ga/eoh/cfg/llm_client/openai.yaml
+++ b/ga/eoh/cfg/llm_client/openai.yaml
@@ -1,4 +1,4 @@
-_target_: ga.reevo.utils.llm_client.openai.OpenAIClient
+_target_: utils.llm_client.openai.OpenAIClient
 
 model: gpt-3.5-turbo # LLM model
 temperature: 1.0 # temperature for chat completion
