--- a/ga/mcts/cfg/llm_client/openai.yaml
+++ b/ga/mcts/cfg/llm_client/openai.yaml
@@ -1,4 +1,4 @@
-_target_: ga.mcts.utils.llm_client.openai.OpenAIClient
+_target_: utils.llm_client.openai.OpenAIClient
 
 model: gpt-4o-mini # LLM model
 temperature: 1.0 # temperature for chat completion
