--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,9 @@ line_length = 88
 [tool.mypy]
 disallow_untyped_defs = true
 disallow_incomplete_defs = true
+
+[tool.pytest.ini_options]
+log_cli = true
+log_cli_level = "INFO"
+log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
+log_cli_date_format = "%Y-%m-%d %H:%M:%S"
