--- a/llamda/problems/bpp_offline_aco/prompts/problem.yaml
+++ b/llamda/problems/bpp_offline_aco/prompts/problem.yaml
@@ -3,4 +3,5 @@ problem_type: aco
 obj_type: min
 problem_size: 500 # problem size for training
 func_name: heuristics
+func_outputs: ["heuristics_matrix"]
 description: Solving Bin Packing Problem (BPP). BPP requires packing a set of items of various sizes into the smallest number of fixed-sized bins.
