--- a/llamda/problems/bpp_online/prompts/problem.yaml
+++ b/llamda/problems/bpp_online/prompts/problem.yaml
@@ -3,4 +3,5 @@ problem_type: online
 obj_type: min
 problem_size: 5000 # problem size for training
 func_name: priority
+func_outputs: ["priority"]
 description: Solving online Bin Packing Problem (BPP). BPP requires packing a set of items of various sizes into the smallest number of fixed-sized bins. Online BPP requires packing an item as soon as it is received.
