--- a/llamda/problems/tsp_aco/prompts/problem.yaml
+++ b/llamda/problems/tsp_aco/prompts/problem.yaml
@@ -3,4 +3,5 @@ problem_type: aco
 obj_type: min
 problem_size: 50 # problem size for training
 func_name: heuristics
+func_outputs: ["heuristics_matrix"]
 description: Solving Traveling Salesman Problem (TSP) via stochastic solution sampling following "heuristics". TSP requires finding the shortest path that visits all given nodes and returns to the starting node.
