--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,89 +7,28 @@ on:
     branches: [main, dev]
 
 jobs:
-  setup:
-    runs-on: ubuntu-latest
-    outputs:
-      cache-key: ${{ steps.cache-key.outputs.key }}
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
-
-      - id: cache-key
-        run: echo "key=${{ runner.os }}-venv-${{ hashFiles('**/requirements-ci.txt') }}" >> $GITHUB_OUTPUT
-
-      # Cache virtual environment
-      - id: cache-venv
-        uses: actions/cache@v3
-        with:
-          path: venv
-          key: ${{ steps.cache-key.outputs.key }}
-          restore-keys: |
-            ${{ runner.os }}-venv-
-
-      # Create and populate virtual environment
-      - name: Setup Python environment
-        run: |
-          if [ ! -d "venv" ]; then
-            python -m venv venv
-          fi
-          source venv/bin/activate
-          python -m pip install --upgrade pip
-          pip install -r requirements-ci.txt --extra-index-url https://download.pytorch.org/whl/cpu
-
   lint:
-    needs: setup
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v4
+      - uses: astral-sh/setup-uv@v4
         with:
-          python-version: "3.10"
+          enable-cache: true
 
-      # Restore the same cached venv
-      - uses: actions/cache@v3
-        with:
-          path: venv
-          key: ${{ needs.setup.outputs.cache-key }}
-          restore-keys: |
-            ${{ runner.os }}-venv-
-          fail-on-cache-miss: true
-
-      - name: Check code formatting (Black)
+      - name: Check formatting and lint
         run: |
-          source venv/bin/activate
-          black --check .
-
-      - name: Lint code (Flake8)
-        run: |
-          source venv/bin/activate
-          flake8 llamda
-          flake8 tests
+          uv run --frozen --dev ruff format --check .
+          uv run --frozen --dev ruff check .
 
   test:
-    needs: setup
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v4
+      - uses: astral-sh/setup-uv@v4
         with:
-          python-version: "3.10"
+          enable-cache: true
 
-      # Restore the same cached venv
-      - uses: actions/cache@v3
-        with:
-          path: venv
-          key: ${{ needs.setup.outputs.cache-key }}
-          restore-keys: |
-            ${{ runner.os }}-venv-
-          fail-on-cache-miss: true
-
-      - name: Run unit tests
-        run: |
-          source venv/bin/activate
-          pytest --cov=llamda --cov-report=xml
+      - name: Run tests
+        run: uv run --frozen --dev pytest --cov=llamda --cov-report=xml
