--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,14 @@ authors = [
 ]
 readme = "README.md"
 requires-python = ">=3.10, <3.12"
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+]
 dependencies = [
     "Jinja2",
     "litellm",
